src/test/deca/codegen/valid/Objet/testCastSimple.deca
// Description:
//    tests division flottante sur 0; débordement lors d'opération arithmétique sur flottants.
//
// Resultats:
//    Error: Débordement arithmétique sur flottants
// 
// Historique:
//    cree le 01/01/2021


{
    int x = 1;
    float y = 1.0;
    println( (float) x);
    println( (int y)  + x);
}
